--- a/src/components/carrousel/style.css
+++ b/src/components/carrousel/style.css
@@ -10,13 +10,12 @@
 
 .carrousel-button-container{
     position: relative;
-    bottom: -300px;
+    bottom: -260px;
     left: 0;
     right: 0;
     display: flex;
     justify-content: center;
-    padding-block: 2em;
-    z-index: 10;
+    z-index: 1;
 }
 
 .carrousel-button:not(:first-of-type){
@@ -48,6 +47,14 @@
 
 .carrousel-item:nth-of-type(3){
     background-color: blue;
+}
+
+.carrousel-item:nth-of-type(4){
+    background-color: orange;
+}
+
+.carrousel-item:nth-of-type(5){
+    background-color: pink;
 }
 
 @media screen and (max-width: 768px) {
